--- a/app/views/discovered_hosts/_discovered_hosts_list.html.erb
+++ b/app/views/discovered_hosts/_discovered_hosts_list.html.erb
@@ -33,6 +33,7 @@
       <td>
         <%= action_buttons(
           link_to(_("Provision"), hash_for_edit_discovered_host_path(:id => host)),
+          link_to(_("Auto Provision"), hash_for_auto_provision_discovered_host_path(:id => host), :method => :post),
           link_to(_("Refresh facts"), hash_for_refresh_facts_discovered_host_path(:id => host)),
           display_delete_if_authorized(hash_for_discovered_host_path(:id => host), :confirm => _("Delete %s?") % host.name, :action => :destroy))%>
         </td>
